--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.2.1",
-        "alpinejs": "^2.7.3",
-        "autoprefixer": "^10.1.0",
         "axios": "^0.21",
+        "bootstrap": "^5.0.0-beta3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.2.1",
-        "postcss-import": "^12.0.1",
-        "tailwindcss": "^2.0.2"
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1",
+        "vue": "^2.6.12"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.9.2",
+        "laravel-echo": "^1.10.0",
+        "moment": "^2.29.1",
+        "pusher-js": "^7.0.3"
     }
 }
