refactor the whole realtime feature

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/beta/realtime/app.js": "/js/beta/realtime/app.js",
-    "/css/beta/realtime/app.css": "/css/beta/realtime/app.css"
+    "/beta/realtime/app.js": "/beta/realtime/app.js",
+    "/beta/realtime/app.css": "/beta/realtime/app.css"
 }
