--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,20 +3,20 @@ version: '3'
 services:
     laravel.test:
         build:
-            context: ./docker/8.0
+            context: ./vendor/laravel/sail/runtimes/8.0
             dockerfile: Dockerfile
             args:
                 WWWGROUP: '${WWWGROUP}'
         image: sail-8.0/app
         ports:
-            - '81:80'
+            - '${APP_PORT:-80}:80'
         environment:
             WWWUSER: '${WWWUSER}'
             LARAVEL_SAIL: 1
         volumes:
             - '.:/var/www/html'
         networks:
-            - sail
+            - voyage
         depends_on:
             - mysql
             - redis
@@ -24,7 +24,7 @@ services:
     mysql:
         image: 'mysql:8.0'
         ports:
-            - '3307:3306'
+            - '${FORWARD_DB_PORT:-3306}:3306'
         environment:
             MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
             MYSQL_DATABASE: '${DB_DATABASE}'
@@ -32,49 +32,49 @@ services:
             MYSQL_PASSWORD: '${DB_PASSWORD}'
             MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
         volumes:
-            - 'sailmysql:/var/lib/mysql'
+            - 'voyagemysql:/var/lib/mysql'
         networks:
-            - sail
+            - voyage
         healthcheck:
           test: ["CMD", "mysqladmin", "ping"]
     redis:
         image: 'redis:alpine'
         ports:
-            - '6380:6379'
+            - '${FORWARD_REDIS_PORT:-6379}:6379'
         volumes:
-            - 'sailredis:/data'
+            - 'voyageredis:/data'
         networks:
-            - sail
+            - voyage
         healthcheck:
           test: ["CMD", "redis-cli", "ping"]
     meilisearch:
         image: 'getmeili/meilisearch:latest'
         ports:
-            - '7701:7700'
+            - '${FORWARD_MEILISEARCH_PORT:-7700}:7700'
         volumes:
-            - 'sailmeilisearch:/data.ms'
+            - 'voyagemeilisearch:/data.ms'
         networks:
-            - sail
+            - voyage
     mailhog:
         image: 'mailhog/mailhog:latest'
         ports:
-            - '1026:1025'
-            - '8026:8025'
+            - '${FORWARD_MAILHOG_PORT:-1025}:1025'
+            - '${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025'
         networks:
-            - sail
+            - voyage
     selenium:
        image: 'selenium/standalone-chrome'
        volumes:
             - '/dev/shm:/dev/shm'
        networks:
-           - sail
+           - voyage
 networks:
-    sail:
+    voyage:
         driver: bridge
 volumes:
-    sailmysql:
+    voyagemysql:
         driver: local
-    sailredis:
+    voyageredis:
         driver: local
-    sailmeilisearch:
+    voyagemeilisearch:
         driver: local
