--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.3.2",
+        "autoprefixer": "^10.2.5",
         "axios": "^0.21",
         "bootstrap": "^5.0.0-beta3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
+        "postcss": "^8.2.13",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
+        "tailwindcss": "^2.1.2",
         "vue": "^2.6.12"
     },
     "dependencies": {
