--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "@tailwindcss/forms": "^0.3.2",
         "autoprefixer": "^10.2.5",
         "axios": "^0.21",
-        "bootstrap": "^5.0.0-beta3",
+        "bootstrap": "^4.6.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.2.13",
@@ -24,7 +24,10 @@
         "vue": "^2.6.12"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.3",
         "@popperjs/core": "^2.9.2",
+        "admin-lte": "^3.1.0",
+        "jquery": "^3.6.0",
         "laravel-echo": "^1.10.0",
         "moment": "^2.29.1",
         "pusher-js": "^7.0.3"
